--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 	<div id="panel" align="center">
 		<p>
 			Вариант:
-			<select id="abcd">
-				<option id="abcd_ab" value="AB">AB</option>
-				<option id="abcd_cd" value="CD">CD</option>
-			</select>
+			<div class="select">
+				<button id="abcd_ab" onclick="PDTest.currentTest.set(this.innerText);" class="btn active">AB</option>
+				<button id="abcd_cd" onclick="PDTest.currentTest.set(this.innerText);" class="btn">CD</option>
+			</div>
 		</p>
 		<p>
 			<a href="#exam" class="btn">Екзамен</a>
@@ -45,40 +45,34 @@
 				Не торопитесь. Удачи!
 			</p>
 			<p>
-				<button onclick="PDTest.start(0, 0, document.getElementById('abcd').value);">ПОЧАТИ!</button>
+				<button onclick="PDTest.start(0, 0);">Начать!</button>
 			</p>
 		</div>
 		<div class="spoiler" id="bynum">
 			<p>
 			Билет:
-				<select id="num">
-					<option selected disabled>Вопросов не найдено</option>
-				</select>
-			</p>
-			<p>
-				<button onclick="PDTest.start(1, document.getElementById('num').value, document.getElementById('abcd').value);">Начать!</button>
+				<div class="select" id="num">
+					Вопросов не найдено
+				</div>
 			</p>
 		</div>
 		<div class="spoiler" id="bythm">
 			<p>
 			Тема:
-				<select id="thm">
+				<select id="thm" multiple>
 					<option selected disabled>Тем не найдено</option>
 				</select>
 			</p>
 			<p>
-				<button onclick="PDTest.start(2, document.getElementById('num').value, document.getElementById('abcd').value)">Начать!</button>
+				<button onclick="PDTest.start(2, document.getElementById('num').value)">Начать!</button>
 			</p>
 		</div>
 		<div class="spoiler" id="byN">
 			<p>
 				Вопрос:
-				<select id="N">
-					<option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option>
-				</select>
-			</p>
-			<p>
-				<button onclick="PDTest.start(3, document.getElementById('N').value, document.getElementById('abcd').value)">Начать!</button>
+				<div class="select" id="N" multiple>
+					<button onclick="PDTest.start(3, 1);" class="btn">1</button><button onclick="PDTest.start(3, 2);" class="btn">2</button><button onclick="PDTest.start(3, 3);" class="btn">3</button><button onclick="PDTest.start(3, 4);" class="btn">4</button><button onclick="PDTest.start(3, 5);" class="btn">5</button><button onclick="PDTest.start(3, 6);" class="btn">6</button><button onclick="PDTest.start(3, 7);" class="btn">7</button><button onclick="PDTest.start(3, 8);" class="btn">8</button><button onclick="PDTest.start(3, 9);" class="btn">9</button><button onclick="PDTest.start(3, 10);" class="btn">10</button><button onclick="PDTest.start(3, 11);" class="btn">11</button><button onclick="PDTest.start(3, 12);" class="btn">12</button><button onclick="PDTest.start(3, 13);" class="btn">13</button><button onclick="PDTest.start(3, 14);" class="btn">14</button><button onclick="PDTest.start(3, 15);" class="btn">15</button><button onclick="PDTest.start(3, 16);" class="btn">16</button><button onclick="PDTest.start(3, 17);" class="btn">17</button><button onclick="PDTest.start(3, 18);" class="btn">18</button><button onclick="PDTest.start(3, 19);" class="btn">19</button><button onclick="PDTest.start(3, 20);" class="btn">20</button>
+				</div>
 			</p>
 		</div>
 		<div class="spoiler" id="top100">
@@ -86,7 +80,7 @@
 				100 сложных вопросов
 			</p>
 			<p>
-				<button onclick="PDTest.start(4, document.getElementById('N').value-1, document.getElementById('abcd').value)">Начать!</button>
+				<button onclick="PDTest.start(4)">Начать!</button>
 			</p>
 		</div>
 		<div class="spoiler" id="maraphon">
@@ -94,7 +88,7 @@
 				Хочу все и сразу!
 			</p>
 			<p>
-				<button onclick="PDTest.start(5, document.getElementById('N').value-1, document.getElementById('abcd').value)">Начать!</button>
+				<button onclick="PDTest.start(5)">Начать!</button>
 			</p>
 		</div>
 	</div>
