--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		<div>
 			<a onclick="PDTest.stop();" class="btn" id="donebtn">ЗАВЕРШИТЬ ТЕСТ</a><br>
-			<a class="btn trigger" onclick="PDTest.start(PDTest.mode, PDTest.startparam);">НАЧАТЬ ЗАНОВО</a>
+			<a class="btn trigger" onclick="PDTest.restart();">НАЧАТЬ ЗАНОВО</a>
 		</div>
 	</div>
 </body>
