--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<span id="separator"></span>
 			<a name="category" class="btn select active trigger" onclick="PDTest.start(0, 0);">Экзамен</a>
 			<a href="#num" name="category" class="btn select trigger">Билет по номеру</a>
-			<a href="#thm" name="category" class="btn select trigger uc">Билет по теме</a>
+			<a href="#sbj" name="category" class="btn select trigger uc">Билет по теме</a>
 			<a href="#N" name="category" class="btn select trigger">Каждый N-й вопрос</a>
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(4)">100 сложных</a>
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(5)">Марафон</a>
@@ -24,9 +24,8 @@
 		<div class="spoiler select" id="num">
 			Вопросов не найдено
 		</div>
-		<div class="spoiler" id="thm">
+		<div class="spoiler" id="sbj">
 			Тем не найдено
-			<button onclick="PDTest.start(2, document.getElementById('num').value)">Начать!</button>
 		</div>
 		<div class="spoiler" id="N">
 			<button onclick="PDTest.start(3, 1);" class="btn select" name="menu2lvl">1</button><button onclick="PDTest.start(3, 2);" class="btn select" name="menu2lvl">2</button><button onclick="PDTest.start(3, 3);" class="btn select" name="menu2lvl">3</button><button onclick="PDTest.start(3, 4);" class="btn select" name="menu2lvl">4</button><button onclick="PDTest.start(3, 5);" class="btn select" name="menu2lvl">5</button><button onclick="PDTest.start(3, 6);" class="btn select" name="menu2lvl">6</button><button onclick="PDTest.start(3, 7);" class="btn select" name="menu2lvl">7</button><button onclick="PDTest.start(3, 8);" class="btn select" name="menu2lvl">8</button><button onclick="PDTest.start(3, 9);" class="btn select" name="menu2lvl">9</button><button onclick="PDTest.start(3, 10);" class="btn select" name="menu2lvl">10</button><button onclick="PDTest.start(3, 11);" class="btn select" name="menu2lvl">11</button><button onclick="PDTest.start(3, 12);" class="btn select" name="menu2lvl">12</button><button onclick="PDTest.start(3, 13);" class="btn select" name="menu2lvl">13</button><button onclick="PDTest.start(3, 14);" class="btn select" name="menu2lvl">14</button><button onclick="PDTest.start(3, 15);" class="btn select" name="menu2lvl">15</button><button onclick="PDTest.start(3, 16);" class="btn select" name="menu2lvl">16</button><button onclick="PDTest.start(3, 17);" class="btn select" name="menu2lvl">17</button><button onclick="PDTest.start(3, 18);" class="btn select" name="menu2lvl">18</button><button onclick="PDTest.start(3, 19);" class="btn select" name="menu2lvl">19</button><button onclick="PDTest.start(3, 20);" class="btn select" name="menu2lvl">20</button>
