--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<a href="#N" name="category" class="btn select trigger">Каждый N-й вопрос</a>
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(4)">100 сложных</a>
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(5)">Марафон</a>
+			<a name="category" class="btn select trigger r"  onclick="PDTest.start(6)">Ошибки</a>
 		</div>
 		
 		<div class="spoiler select" id="num">
