--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="HandheldFriendly" content="True">
 	<meta charset="UTF-8" >
+	<script src='script.js'></script>
 </head>
 <body>
 	<div id="panel" align="center">
@@ -20,6 +21,7 @@
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(4)">100 сложных</a>
 			<a name="category" class="btn select trigger"  onclick="PDTest.start(5)">Марафон</a>
 			<a name="category" class="btn select trigger r"  onclick="PDTest.start(6)">Ошибки</a>
+			<a href="#settings"name="category" class="btn select trigger g">Настройки</a>
 		</div>
 		
 		<div class="spoiler select" id="num">
@@ -30,6 +32,25 @@
 		</div>
 		<div class="spoiler" id="N">
 			<button onclick="PDTest.start(3, 1);" class="btn select" name="menu2lvl">1</button><button onclick="PDTest.start(3, 2);" class="btn select" name="menu2lvl">2</button><button onclick="PDTest.start(3, 3);" class="btn select" name="menu2lvl">3</button><button onclick="PDTest.start(3, 4);" class="btn select" name="menu2lvl">4</button><button onclick="PDTest.start(3, 5);" class="btn select" name="menu2lvl">5</button><button onclick="PDTest.start(3, 6);" class="btn select" name="menu2lvl">6</button><button onclick="PDTest.start(3, 7);" class="btn select" name="menu2lvl">7</button><button onclick="PDTest.start(3, 8);" class="btn select" name="menu2lvl">8</button><button onclick="PDTest.start(3, 9);" class="btn select" name="menu2lvl">9</button><button onclick="PDTest.start(3, 10);" class="btn select" name="menu2lvl">10</button><button onclick="PDTest.start(3, 11);" class="btn select" name="menu2lvl">11</button><button onclick="PDTest.start(3, 12);" class="btn select" name="menu2lvl">12</button><button onclick="PDTest.start(3, 13);" class="btn select" name="menu2lvl">13</button><button onclick="PDTest.start(3, 14);" class="btn select" name="menu2lvl">14</button><button onclick="PDTest.start(3, 15);" class="btn select" name="menu2lvl">15</button><button onclick="PDTest.start(3, 16);" class="btn select" name="menu2lvl">16</button><button onclick="PDTest.start(3, 17);" class="btn select" name="menu2lvl">17</button><button onclick="PDTest.start(3, 18);" class="btn select" name="menu2lvl">18</button><button onclick="PDTest.start(3, 19);" class="btn select" name="menu2lvl">19</button><button onclick="PDTest.start(3, 20);" class="btn select" name="menu2lvl">20</button>
+		</div>
+		<div class="spoiler" id="settings">
+			<h1>Настройки</h1>
+			<p>
+				Очистить статистику: 
+				<button onclick="PDTest.stats.clear();alert('Готово!');" class="btn">ОЧИСТИТЬ</button>
+			</p>
+			<p>
+				Авто-переход: 
+				<button name="settings_s1" onclick="PDTest.settings.set('autoContinue', true)" class="btn select">ДА</button>
+				<button name="settings_s1" onclick="PDTest.settings.set('autoContinue', false)" class="btn select">НЕТ</button>
+				<script>
+					if(PDTest.settings.get("autoContinue") == "true"){
+						document.getElementsByName("settings_s1")[0].className += " active";
+					}else{
+						document.getElementsByName("settings_s1")[1].className += " active";
+					}
+				</script>
+			</p>
 		</div>
 	</div>
 	<div id="testnav"></div>
@@ -54,9 +75,16 @@
 	</div>
 	<div id="sidebar">
 		<div>
+			<b>Этот тест: </b><br>
 			Правильно: <span id="sidebar_true">0</span><br>
 			Не правильно: <span id="sidebar_false">0</span><br>
 			Вместе: <span id="sidebar_total">0</span>/<span id="sidebar_of">∞</span>
+		</div>
+		<div>
+			<b>Всего: </b><br>
+			Правильно: <span id="stats_true">0</span><br>
+			Не правильно: <span id="stats_false">0</span><br>
+			Вместе: <span id="stats_total">0</span>
 		</div>
 		<div>
 			<a onclick="PDTest.stop();" class="btn" id="donebtn">ЗАВЕРШИТЬ ТЕСТ</a><br>
@@ -64,5 +92,4 @@
 		</div>
 	</div>
 </body>
-<script src='script.js'></script>
 </html>
