--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<button id="abcd_ab" onclick="PDTest.currentTest.set(this.innerText);" name="abcd" class="btn g select active">AB</button>
 			<button id="abcd_cd" onclick="PDTest.currentTest.set(this.innerText);" name="abcd" class="btn g select">CD</button>
 			<span id="separator"></span>
-			<a name="category" class="btn select active trigger" onclick="PDTest.start(0, 0);">Экзамен</a>
+			<a name="category" class="btn select active trigger" onclick="PDTest.start(0);">Экзамен</a>
 			<a href="#num" name="category" class="btn select trigger">Билет по номеру</a>
 			<a href="#sbj" name="category" class="btn select trigger uc">Билет по теме</a>
 			<a href="#N" name="category" class="btn select trigger">Каждый N-й вопрос</a>
