Додав текст при завершенні
і пофіксив баги

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 	<div id="test"></div>
 	
 	<div class="spoiler" id="done">
+		<p id="donetitle"></p>
 		<p>
-			Твой результат:
+			Ваш результат:
 		</p>
 		<p>
 			<b>Правильно: </b><span id="done_true">0</span>
@@ -43,7 +44,7 @@
 			<b>Вместе: </b><span id="done_total">0</span>/<span id="done_of">0</span>
 		</p>
 		<p >
-			<a class="btn select trigger" onclick="PDTest.start(PDTest.mode, PDTest.startparam);">Пройти заново</a>
+			<a class="btn select trigger" onclick="PDTest.restart();">Пройти заново</a>
 		</p>
 	</div>
 	<div id="sidebar">
