Тепер селект сам міняє ширину

--- a/index.html
+++ b/index.html
@@ -12,15 +12,31 @@
 	<div id="panel">
 		<button id="abcd_ab" onclick="PDTest.currentTest.set(this.innerText);" name="abcd" class="btn g select active">AB</button>
 		<button id="abcd_cd" onclick="PDTest.currentTest.set(this.innerText);" name="abcd" class="btn g select">CD</button>
+		
 		<a name="category" class="btn select active" onclick="PDTest.start(0);">Экзамен</a>
-		<select name="category" id="num" class="btn select" onchange="PDTest.start(1, this.value);">
+		<select name="category" id="num" class="btn select" onchange="
+			PDTest.start(1, this.value);
+			byId('sbj').outerHTML+='';
+			byId('sbj').style.width='';
+			byId('N').outerHTML+='';
+		">
 			<option selected disabled>Билет по номеру</option>
 		</select>
-		<select name="category" id="sbj" class="btn select" onchange="PDTest.start(2, this.value);">
+		<select name="category" id="sbj" class="btn select" onchange="
+			PDTest.start(2, this.value);
+			byId('num').outerHTML+='';
+			byId('N').outerHTML+='';
+			byId('sbj').style.width = 20+PDTest.currentTest.getSubject()[this.value].title.length*9+'px'
+			">
 			<option selected disabled>Билет по теме</option>
 		</select>
-		<select name="category" id="N" class="btn select" onchange="PDTest.start(3, this.value);">
-			<option selected disabled>Каждый N-й вопрос</option><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option>
+		<select name="category" id="N" class="btn select" onchange="
+			PDTest.start(3, this.value);
+			byId('num').outerHTML+='';
+			byId('sbj').outerHTML+='';
+			byId('sbj').style.width='';
+		">
+			<option selected disabled>Каждый N-й вопрос</option><option value="1">Каждый 1-й</option><option value="2">Каждый 2-й</option><option value="3">Каждый 3-й</option><option value="4">Каждый 4-й</option><option value="5">Каждый 5-й</option><option value="6">Каждый 6-й</option><option value="7">Каждый 7-й</option><option value="8">Каждый 8-й</option><option value="9">Каждый 9-й</option><option value="10">Каждый 10-й</option><option value="11">Каждый 11-й</option><option value="12">Каждый 12-й</option><option value="13">Каждый 13-й</option><option value="14">Каждый 14-й</option><option value="15">Каждый 15-й</option><option value="16">Каждый 16-й</option><option value="17">Каждый 17-й</option><option value="18">Каждый 18-й</option><option value="19">Каждый 19-й</option><option value="20">Каждый 20-й</option>
 		</select>
 		<a name="category" class="btn select"  onclick="PDTest.start(4)">100 сложных</a>
 		<a name="category" class="btn select"  onclick="PDTest.start(5)">Марафон</a>
